quant:forex  method docstring
